--- a/examples/amaranth-demo/package.json
+++ b/examples/amaranth-demo/package.json
@@ -37,7 +37,8 @@
     "gatsby": "^3.8.1",
     "gatsby-theme-amaranth": "workspace:*",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "styled-components": "^5.3.0"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^5.14.1",
@@ -46,6 +47,7 @@
     "@types/node": "^16.0.0",
     "@types/react": "^17.0.13",
     "@types/react-dom": "^17.0.8",
+    "@types/styled-components": "^5.1.11",
     "@typescript-eslint/eslint-plugin": "^4.28.1",
     "babel-jest": "^27.0.6",
     "eslint": "^7.30.0",
