--- a/examples/advanced-demo/package.json
+++ b/examples/advanced-demo/package.json
@@ -28,10 +28,15 @@
     "format:js": "prettier '**/*.{js,jsx,ts,tsx}' --write",
     "format:styles": "prettier '**/*.css' --write",
     "format:all": "npm run format:js && npm run format:styles",
-    "test": "jest",
+    "test:unit": "jest",
     "type-check": "tsc --noEmit",
     "type-check:watch": "npm run type-check -- --watch",
-    "write-good": "write-good $(glob 'content/**/*.md')"
+    "write-good": "write-good $(glob 'content/**/*.md')",
+    "cy:open": "cypress open",
+    "cy:run": "cypress run",
+    "test:e2e:dev": "CYPRESS_SUPPORT=y CYPRESS_BASE_URL=http://localhost:8000 CYPRESS_STAGE=dev start-server-and-test develop http://localhost:8000 cy:open",
+    "test:e2e": "CYPRESS_SUPPORT=y npm run build && start-server-and-test serve http://localhost:9000 cy:open",
+    "test:e2e:ci": "CYPRESS_SUPPORT=y npm run build && start-server-and-test serve http://localhost:9000 cy:run"
   },
   "dependencies": {
     "gatsby": "^3.8.1",
@@ -45,6 +50,7 @@
     "react-share": "^4.4.0"
   },
   "devDependencies": {
+    "@testing-library/cypress": "^7.0.6",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^12.0.0",
     "@types/jest": "^26.0.23",
@@ -53,12 +59,18 @@
     "@types/react": "^17.0.13",
     "@types/react-dom": "^17.0.8",
     "@types/react-helmet": "^6.1.1",
+    "@types/xml2js": "^0.4.9",
     "@typescript-eslint/eslint-plugin": "^4.28.1",
+    "axe-core": "^4.3.1",
     "babel-jest": "^27.0.6",
+    "babel-preset-gatsby": "^1.9.0",
+    "cypress": "^7.7.0",
+    "cypress-axe": "^0.12.2",
     "eslint": "^7.30.0",
     "eslint-config-airbnb": "^18.2.1",
     "eslint-config-airbnb-typescript": "^12.3.1",
     "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-cypress": "^2.11.3",
     "eslint-plugin-import": "^2.23.4",
     "eslint-plugin-jest": "^24.3.6",
     "eslint-plugin-jest-dom": "^3.9.0",
@@ -67,10 +79,12 @@
     "eslint-plugin-react": "^7.24.0",
     "eslint-plugin-react-hooks": "^4.2.0",
     "eslint-plugin-testing-library": "^4.7.0",
+    "gatsby-cypress": "^1.9.0",
     "gh-pages": "^3.2.3",
     "jest": "^27.0.6",
     "markdownlint-cli2": "^0.1.3",
     "prettier": "^2.3.2",
+    "start-server-and-test": "^1.12.6",
     "stylelint": "^13.13.1",
     "stylelint-config-prettier": "^8.0.2",
     "stylelint-config-recommended": "^5.0.0",
@@ -79,6 +93,7 @@
     "ts-node": "^10.0.0",
     "ts-prune": "^0.9.2",
     "typescript": "^4.3.5",
-    "write-good": "^1.0.8"
+    "write-good": "^1.0.8",
+    "xml2js": "^0.4.23"
   }
 }
