--- a/examples/amaranth-demo/package.json
+++ b/examples/amaranth-demo/package.json
@@ -34,7 +34,9 @@
     "write-good": "write-good $(glob 'content/**/*.md')"
   },
   "dependencies": {
+    "babel-plugin-styled-components": "^1.13.2",
     "gatsby": "^3.8.1",
+    "gatsby-plugin-styled-components": "^4.9.0",
     "gatsby-theme-amaranth": "workspace:*",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
