--- a/package.json
+++ b/package.json
@@ -40,7 +40,9 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "babel-plugin-styled-components": "^1.13.2",
     "gatsby": "^3.8.1",
+    "gatsby-plugin-styled-components": "^4.9.0",
     "gatsby-theme-amaranth": "workspace:*",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
