--- a/examples/amaranth-demo/package.json
+++ b/examples/amaranth-demo/package.json
@@ -12,9 +12,9 @@
   "license": "MIT",
   "main": "n/a",
   "scripts": {
-    "develop": "gatsby develop",
+    "develop": "CYPRESS_SUPPORT=y gatsby develop",
     "dev": "npm run develop",
-    "dev:network": "gatsby develop -H 0.0.0.0",
+    "dev:network": "CYPRESS_SUPPORT=y gatsby develop -H 0.0.0.0",
     "serve": "gatsby serve",
     "build": "gatsby build",
     "build:gh": "npm run clean && npm run build && gh-pages -d public",
@@ -31,7 +31,13 @@
     "test": "jest",
     "type-check": "tsc --noEmit",
     "type-check:watch": "npm run type-check -- --watch",
-    "write-good": "write-good $(glob 'content/**/*.md')"
+    "write-good": "write-good $(glob 'content/**/*.md')",
+    "cy:open:dev": "CYPRESS_STAGE=dev CYPRESS_BASE_URL=http://localhost:8000 cypress open",
+    "cy:open": "cypress open",
+    "cy:run": "cypress run",
+    "test:e2e:dev": "CYPRESS_SUPPORT=y CYPRESS_BASE_URL=http://localhost:8000 CYPRESS_STAGE=dev start-server-and-test develop http://localhost:8000 cy:open",
+    "test:e2e": "CYPRESS_SUPPORT=y npm run build && start-server-and-test serve http://localhost:9000 cy:open",
+    "test:e2e:ci": "CYPRESS_SUPPORT=y npm run build && start-server-and-test serve http://localhost:9000 cy:run"
   },
   "dependencies": {
     "babel-plugin-styled-components": "^1.13.2",
@@ -43,6 +49,7 @@
     "styled-components": "^5.3.0"
   },
   "devDependencies": {
+    "@testing-library/cypress": "^7.0.6",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^12.0.0",
     "@types/jest": "^26.0.23",
@@ -50,8 +57,11 @@
     "@types/react": "^17.0.13",
     "@types/react-dom": "^17.0.8",
     "@types/styled-components": "^5.1.11",
+    "@types/xml2js": "^0.4.9",
     "@typescript-eslint/eslint-plugin": "^4.28.1",
     "babel-jest": "^27.0.6",
+    "cypress": "^7.7.0",
+    "cypress-axe": "^0.12.2",
     "eslint": "^7.30.0",
     "eslint-config-airbnb": "^18.2.1",
     "eslint-config-airbnb-typescript": "^12.3.1",
@@ -64,10 +74,12 @@
     "eslint-plugin-react": "^7.24.0",
     "eslint-plugin-react-hooks": "^4.2.0",
     "eslint-plugin-testing-library": "^4.7.0",
+    "gatsby-cypress": "^1.9.0",
     "gh-pages": "^3.2.3",
     "jest": "^27.0.6",
     "markdownlint-cli2": "^0.1.3",
     "prettier": "^2.3.2",
+    "start-server-and-test": "^1.12.6",
     "stylelint": "^13.13.1",
     "stylelint-config-prettier": "^8.0.2",
     "stylelint-config-recommended": "^5.0.0",
@@ -76,6 +88,7 @@
     "ts-node": "^10.0.0",
     "ts-prune": "^0.9.2",
     "typescript": "^4.3.5",
-    "write-good": "^1.0.8"
+    "write-good": "^1.0.8",
+    "xml2js": "^0.4.23"
   }
 }
