--- a/examples/amaranth-demo/package.json
+++ b/examples/amaranth-demo/package.json
@@ -59,6 +59,7 @@
     "@types/styled-components": "^5.1.11",
     "@types/xml2js": "^0.4.9",
     "@typescript-eslint/eslint-plugin": "^4.28.1",
+    "axe-core": "^4.3.1",
     "babel-jest": "^27.0.6",
     "cypress": "^7.7.0",
     "cypress-axe": "^0.12.2",
