--- a/package.json
+++ b/package.json
@@ -88,5 +88,8 @@
     "ts-prune": "^0.9.2",
     "typescript": "^4.3.5",
     "write-good": "^1.0.8"
+  },
+  "resolutions": {
+    "postcss": "8.3.5"
   }
 }
