--- a/themes/advanced/package.json
+++ b/themes/advanced/package.json
@@ -102,6 +102,7 @@
     "identity-obj-proxy": "^3.0.0",
     "jest": "^27.0.6",
     "markdownlint-cli2": "^0.1.3",
+    "memfs": "^3.2.2",
     "prettier": "^2.3.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
