--- a/themes/advanced/package.json
+++ b/themes/advanced/package.json
@@ -67,8 +67,10 @@
     "@babel/preset-env": "^7.14.7",
     "@babel/preset-react": "^7.14.5",
     "@babel/preset-typescript": "^7.14.5",
+    "@testing-library/dom": "^8.1.0",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^12.0.0",
+    "@testing-library/react-hooks": "^7.0.1",
     "@types/babel__plugin-transform-runtime": "^7.9.2",
     "@types/clone-deep": "^4.0.1",
     "@types/jest": "^26.0.24",
@@ -76,6 +78,7 @@
     "@types/react": "^17.0.14",
     "@types/react-dom": "^17.0.9",
     "@types/react-helmet": "^6.1.2",
+    "@types/react-test-renderer": "^17",
     "@types/remove-markdown": "^0.3.1",
     "@types/source-map-support": "^0.5.4",
     "@types/url-join": "^4.0.1",
@@ -96,6 +99,7 @@
     "eslint-plugin-react": "^7.24.0",
     "eslint-plugin-react-hooks": "^4.2.0",
     "eslint-plugin-testing-library": "^4.9.1",
+    "fetch-mock": "^9.11.0",
     "gatsby": "^3.9.1",
     "gh-pages": "^3.2.3",
     "husky": "^7.0.1",
@@ -106,6 +110,7 @@
     "prettier": "^2.3.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-test-renderer": "^17.0.2",
     "stylelint": "^13.13.1",
     "stylelint-config-prettier": "^8.0.2",
     "stylelint-config-recommended": "^5.0.0",
