--- a/package.json
+++ b/package.json
@@ -35,6 +35,12 @@
     "test": "jest",
     "type-check": "tsc --noEmit",
     "type-check:watch": "npm run type-check -- --watch",
+    "cy:open:dev": "CYPRESS_STAGE=dev CYPRESS_BASE_URL=http://localhost:8000 cypress open",
+    "cy:open": "cypress open",
+    "cy:run": "cypress run",
+    "test:e2e:dev": "CYPRESS_SUPPORT=y CYPRESS_BASE_URL=http://localhost:8000 CYPRESS_STAGE=dev start-server-and-test develop http://localhost:8000 cy:open",
+    "test:e2e": "CYPRESS_SUPPORT=y npm run build && start-server-and-test serve http://localhost:9000 cy:open",
+    "test:e2e:ci": "CYPRESS_SUPPORT=y npm run build && start-server-and-test serve http://localhost:9000 cy:run",
     "write-good": "write-good $(glob 'content/**/*.md')",
     "check": "yarn workspaces foreach -A -v -p run lint:all && yarn workspaces foreach -A -v -p run type-check",
     "prepare": "husky install"
@@ -61,6 +67,7 @@
     "@types/styled-components": "^5.1.11",
     "@typescript-eslint/eslint-plugin": "^4.28.3",
     "babel-jest": "^27.0.6",
+    "cypress": "^8.1.0",
     "cypress-axe": "^0.12.2",
     "eslint": "^7.31.0",
     "eslint-config-airbnb": "^18.2.1",
@@ -74,12 +81,14 @@
     "eslint-plugin-react": "^7.24.0",
     "eslint-plugin-react-hooks": "^4.2.0",
     "eslint-plugin-testing-library": "^4.9.1",
+    "gatsby-cypress": "^1.11.0",
     "gh-pages": "^3.2.3",
     "husky": "^7.0.1",
     "jest": "^27.0.6",
     "jest-styled-components": "^7.0.5",
     "markdownlint-cli2": "^0.1.3",
     "prettier": "^2.3.2",
+    "start-server-and-test": "^1.13.1",
     "stylelint": "^13.13.1",
     "stylelint-config-prettier": "^8.0.2",
     "stylelint-config-recommended": "^5.0.0",
